--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ p {
   padding: 50px 50px;
   width: 500px;
   box-shadow: 5px 5px 5px rgb(243, 221, 172);
+  border-radius: 5px;
 }
 .img-circle {
   border-radius: 100px;
@@ -54,6 +55,7 @@ p {
   margin: 40px auto;
   padding: 1px 50px;
   width: 500px;
+  border-radius: 5px;
 }
 
 .follow-me {
